# local-multiplayer

./: Cargo.toml
game/: Cargo.toml
game/src/: app.rs  game.rs  main.rs  render.rs
game/src/game/: camera.rs  mod.rs
game/src/render/: bindings.rs  buffer.rs  font.rs  font.wgsl  mod.rs  quad.rs  quad.wgsl  resources.rs  uniform.rs  utils.rs  vertex.rs
network/: Cargo.toml
network/examples/: echo.rs
network/src/: lib.rs
