[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
bytemuck = { version = "1.23.1", features = ["derive"] }
env_logger = "0.11.8"
gilrs = "0.11.0"
glam = { version = "0.30.4", features = ["bytemuck"] }
log = "0.4.27"
pollster = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "sync"] }
wgpu = "25.0.2"
winit = "0.30.11"
